@@ -1,6 +1,9 @@
 Internal, very small, undocumented, or invisible changes
 ********************************************************
 
+Camlp5 Version 6.02:
+--------------------
+
 Camlp5 Version 6.01:
 --------------------
 
